GNOME Bugzilla – Bug 722927
window-tracker: Fix memory leak
Last modified: 2014-01-30 23:01:06 UTC
Small drive-by fix.
Created attachment 267147 [details] [review] window-tracker: Fix memory leak shell_window_tracker_get_window_app() returns a new reference which we need to drop once we're done.
Review of attachment 267147 [details] [review]: Oops. Looks good.
Attachment 267147 [details] pushed as ac22172 - window-tracker: Fix memory leak