src/shell-window-tracker.c
@@ -443,6 +443,8 @@ update_focus_app (ShellWindowTracker *self)
     }
 
   set_focus_app (self, new_focus_app);
+
+  g_clear_object (&new_focus_app);
 }
 
 static void
